# taichi_aot_benchmark

./: .gitignore
android/: CMakeLists.txt
android/c_api/taichi/lib/cmake/taichi/: TaichiConfigVersion.cmake
android/script/: build-android.sh  compile_and_run.sh
pc/: CMakeLists.txt  app.cpp  base.h  gaussian_filter.cpp  gaussian_filter.h  gemm.cpp  gemm.h  nlmean.cpp  nlmean.h  reduce_sum.cpp  reduce_sum.h
pc/c_api/linux/runtime/: runtime_cuda.bc  runtime_x64.bc
pc/c_api/osx/taichi/lib/cmake/taichi/: TaichiTargets.cmake
pc/script/: build_pc.sh
taichi_algorithm/: module.tcm  taichi_julia.py
taichi_algorithm/bench_case/: taichi_gaussian.py  taichi_gemm.py  taichi_gemm.tcm  taichi_nlmean.py  taichi_reduce_sum.tcm  taichi_sum.py
